--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,20 @@
 
 buildscript {
     ext.kotlin_version = '1.3.41'
+    ext.appcompat_version = '1.1.0-rc01'
+    ext.constraintlayout_version = '2.0.0-beta2'
+    ext.core_version = '1.1.0-rc03'
+    ext.lifecycle_version = '2.1.0-rc01'
+    ext.navigation_version = '2.1.0-rc01'
+    ext.recyclerview_version = '1.1.0-beta03'
+    ext.material_version = '1.1.0-alpha09'
+    ext.rxJava_version = '2.2.5'
+    ext.rxAndroid_version = '2.1.1'
+    ext.retrofit_version = '2.5.0'
+    ext.moshi_version = '1.8.0'
+    ext.picasso_version = '2.71828'
+    ext.daggerVersion = '2.13'
+
     repositories {
         google()
         jcenter()
