--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.margge.dogami.DogamiApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
@@ -20,9 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".presentation.detail.DetailActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".presentation.detail.DetailActivity" />
     </application>
 
 </manifest>
