--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     */
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation 'com.karumi:dexter:5.0.0'
 }
