--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,54 +37,11 @@ dependencies {
     implementation project(":data")
     implementation project(":domain")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation kotlinLibs.values()
+    implementation androidLibs.values()
+    implementation libs.values()
+    kapt androidKaptLibs.values()
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
-    implementation "com.google.android.material:material:$material_version"
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-
-    /*
-    * Coroutines
-    */
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
-
-    /*
-    * Retrofit
-    */
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-
-    /*
-    * LeakCanary
-    */
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.0-alpha-3"
-
-    /*
-    * Glide
-    */
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-
-    /*
-    * Room
-    */
-    implementation 'androidx.room:room-runtime:2.2.3'
-    kapt 'androidx.room:room-compiler:2.2.3'
-
-    /*
-    * Dagger2
-    */
-    implementation "com.google.dagger:dagger:$daggerVersion"
-    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-
-    implementation 'com.karumi:dexter:5.0.0'
+    testImplementation testLibs.values()
+    androidTestImplementation androidTestLibs.values()
 }
