--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,12 @@
 
 buildscript {
     ext.kotlin_version = '1.3.41'
-    ext.appcompat_version = '1.1.0-rc01'
-    ext.constraintlayout_version = '2.0.0-beta2'
-    ext.core_version = '1.1.0-rc03'
-    ext.lifecycle_version = '2.1.0-rc01'
-    ext.navigation_version = '2.1.0-rc01'
-    ext.recyclerview_version = '1.1.0-beta03'
-    ext.material_version = '1.1.0-alpha09'
-    ext.retrofit_version = '2.5.0'
-    ext.daggerVersion = '2.23.1'
 
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -29,6 +20,52 @@ allprojects {
     repositories {
         google()
         jcenter()
+    }
 
+    ext {
+
+        kotlinLibs = [
+                stdlib    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+                coroutines: 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+        ]
+
+        androidLibs = [
+                appcompat           : 'androidx.appcompat:appcompat:1.1.0',
+                recyclerview        : 'androidx.recyclerview:recyclerview:1.1.0-beta03',
+                constraintlayout    : 'androidx.constraintlayout:constraintlayout:2.0.0-beta2',
+                androidxCore        : 'androidx.core:core-ktx:1.0.2',
+                lifecycleExtensions : 'android.arch.lifecycle:extensions:2.1.0-rc01',
+                playServicesLocation: 'com.google.android.gms:play-services-location:17.0.0',
+                material            : 'com.google.android.material:material:1.1.0-alpha09',
+                roomRuntime         : 'androidx.room:room-runtime:2.2.3'
+        ]
+
+        androidKaptLibs = [
+                roomCompiler : 'androidx.room:room-compiler:2.2.3',
+                glideCompiler: 'com.github.bumptech.glide:compiler:4.9.0',
+                kaptCompiler : 'com.google.dagger:dagger-compiler:2.23.1'
+        ]
+
+        libs = [
+                okhttpLoginInterceptor   : 'com.squareup.okhttp3:logging-interceptor:3.14.1',
+                retrofit                 : 'com.squareup.retrofit2:retrofit:2.5.0',
+                retrofitGsonConverter    : 'com.squareup.retrofit2:converter-gson:2.5.0',
+                retrofitCoroutinesAdapter: 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2',
+                dagger                   : "com.google.dagger:dagger:2.23.1",
+                glide                    : 'com.github.bumptech.glide:glide:4.9.0',
+                dexter                   : 'com.karumi:dexter:5.0.0',
+                swiperefresh        : 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+        ]
+
+        testLibs = [
+                junit        : 'junit:junit:4.12',
+                mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0",
+                mockitoInline: "org.mockito:mockito-inline:2.28.2"
+        ]
+
+        androidTestLibs = [
+                testRunner: 'androidx.test:runner:1.2.0',
+                espresso  : 'androidx.test.espresso:espresso-core:3.2.0'
+        ]
     }
 }
