--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,9 @@ dependencies {
     testImplementation testLibs.values()
     testImplementation androidxTestLibs.values()
     androidTestImplementation androidTestLibs.values()
+
+    kaptAndroidTest "com.google.dagger:dagger-compiler:2.24"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0'
+    testImplementation 'com.google.dagger:dagger:2.24'
+    kaptTest 'com.google.dagger:dagger-compiler:2.24'
 }
