--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,12 @@ allprojects {
         testLibs = [
                 junit        : 'junit:junit:4.12',
                 mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0",
-                mockitoInline: "org.mockito:mockito-inline:2.28.2"
+                mockitoInline: "org.mockito:mockito-inline:2.28.2",
+                daggerTests  : 'com.google.dagger:dagger:2.24'
+        ]
+
+        kaptTestLibs = [
+                daggerTestCompiler: 'com.google.dagger:dagger-compiler:2.24'
         ]
 
         androidxTestLibs = [
