--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,10 @@ allprojects {
         ]
 
         libs = [
-                okhttpLoginInterceptor   : 'com.squareup.okhttp3:logging-interceptor:3.14.1',
-                retrofit                 : 'com.squareup.retrofit2:retrofit:2.5.0',
-                retrofitGsonConverter    : 'com.squareup.retrofit2:converter-gson:2.5.0',
+                okhttp                   : "com.squareup.okhttp3:okhttp:4.4.0",
+                okhttpLoginInterceptor   : 'com.squareup.okhttp3:logging-interceptor:4.4.0',
+                retrofit                 : 'com.squareup.retrofit2:retrofit:2.6.0',
+                retrofitGsonConverter    : 'com.squareup.retrofit2:converter-gson:2.6.0',
                 retrofitCoroutinesAdapter: 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2',
                 dagger                   : "com.google.dagger:dagger:2.24",
                 glide                    : 'com.github.bumptech.glide:glide:4.9.0',
@@ -73,8 +74,15 @@ allprojects {
         ]
 
         androidTestLibs = [
-                testRunner: 'androidx.test:runner:1.2.0',
-                espresso  : 'androidx.test.espresso:espresso-core:3.2.0'
+                testRunner      : 'androidx.test:runner:1.2.0',
+                espresso        : 'androidx.test.espresso:espresso-contrib:3.2.0',
+                rules           : 'androidx.test:rules:1.2.0',
+                extJunit        : 'androidx.test.ext:junit-ktx:1.1.1',
+                koinTest        : 'org.koin:koin-test:2.0.1',
+                mockWebServer   : 'com.squareup.okhttp3:mockwebserver:4.4.0',
+                okhttpIdling    : 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0',
+                espressoIntents : "androidx.test.espresso:espresso-intents:3.2.0"
+
         ]
     }
 }
