--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -32,9 +34,9 @@ allprojects {
         androidLibs = [
                 appcompat           : 'androidx.appcompat:appcompat:1.1.0',
                 recyclerview        : 'androidx.recyclerview:recyclerview:1.1.0-beta03',
-                constraintlayout    : 'androidx.constraintlayout:constraintlayout:2.0.0-beta2',
-                androidxCore        : 'androidx.core:core-ktx:1.0.2',
-                lifecycleExtensions : 'android.arch.lifecycle:extensions:2.1.0-rc01',
+                constraintlayout    : 'androidx.constraintlayout:constraintlayout:1.1.3',
+                androidxCore        : 'androidx.core:core-ktx:1.3.0',
+                lifecycleExtensions : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha04',
                 playServicesLocation: 'com.google.android.gms:play-services-location:17.0.0',
                 material            : 'com.google.android.material:material:1.1.0-alpha09',
                 roomRuntime         : 'androidx.room:room-runtime:2.2.3'
@@ -42,8 +44,7 @@ allprojects {
 
         androidKaptLibs = [
                 roomCompiler : 'androidx.room:room-compiler:2.2.3',
-                glideCompiler: 'com.github.bumptech.glide:compiler:4.9.0',
-                kaptCompiler : 'com.google.dagger:dagger-compiler:2.24'
+                glideCompiler: 'com.github.bumptech.glide:compiler:4.9.0'
         ]
 
         libs = [
@@ -52,7 +53,6 @@ allprojects {
                 retrofit                    : 'com.squareup.retrofit2:retrofit:2.6.0',
                 retrofitGsonConverter       : 'com.squareup.retrofit2:converter-gson:2.6.0',
                 retrofitCoroutinesAdapter   : 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2',
-                dagger                      : "com.google.dagger:dagger:2.24",
                 glide                       : 'com.github.bumptech.glide:glide:4.9.0',
                 dexter                      : 'com.karumi:dexter:5.0.0',
                 swiperefresh                : 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
